<resources>
    <string name="app_name">Cinestech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome_back">Welcome Back !</string>
    <string name="text_login_in_to_your_account">Login In to your account</string>
    <string name="text_email">Email:</string>
    <string name="text_password">Password</string>
    <string name="text_enter_email">Enter Email</string>
    <string name="text_enter_password">Enter Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_login_with_google">Login With Google</string>
    <string name="text_don_t_have_account">Don,t have account?</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="text_create_account_and_enjoy_all_services">Create account and enjoy all services</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_do_you_have_an_account">Do you have an account?</string>
    <string name="text_title_forgot_password">Forgot Password</string>
    <string name="text_please_enter_yout_email_to_reset_your_password">Please enter yout email to reset your password</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_check_your_email">Check your Email</string>
    <string name="text_enter_6_digit_code_that_mentioned_in_the_email">Enter 6 digit code that mentioned in the email</string>
    <string name="text_verify_code">Verify Code</string>
    <string name="text_haven_t_got_the_email_yet">Haven\'t got the email yet?</string>
    <string name="text_resend_email">Resend email</string>
    <string name="text_create_new_password">Create new password</string>
    <string name="text_create_a_new_password_ensure_it_differs_from_previous_ones_for_security">Create a new password. Ensure it differs from previous ones for security</string>
    <string name="text_update_password">Update password</string>
    <string name="text_re_enter_password">Re-enter Password</string>
    <string name="text_password_changed">Password Changed</string>
    <string name="text_password_changed_successfully_you_can_login_with_a_new_password">Password changed successfully, you can login with a new password</string>
    <string name="text_full_name">Full name</string>
    <string name="text_best_movies_in_theaters">Best Movies in Theaters</string>
    <string name="text_view_all">View all</string>
    <string name="text_coming_soon">Coming soon</string>
    <string name="text_upcoming_movies">Upcoming movies</string>
    <string name="text_latest_movie_reviews">Latest movie reviews</string>
    <string name="text_now_showing">Now Showing</string>
    <string name="text_no_reviews_yet">No reviews yet.</string>
    <string name="text_review">Review: %1$s</string>
    <string name="text_rate_5">⭐ %1$d/10</string>
    <string name="text_movie_information">Movie Information</string>
    <string name="text_trailer">Trailer</string>
    <string name="text_premiere_date">Premiere date</string>
    <string name="text_duration">Duration</string>
    <string name="text_language_options">Language options</string>
    <string name="text_language">Language</string>
    <string name="text_storyline">Storyline</string>
    <string name="text_actors">Actors</string>
    <string name="text_images_and_video">Images and Video</string>
    <string name="text_book_movie_tickets">Book Movie Tickets</string>
    <string name="text_this_movie_is_rated_pg_for_intense_action_sequences_and_some_language">This movie is rated PG-%1$d for intense action sequences and some language.</string>
    <string name="text_subtitled">Subtitled</string>
    <string name="text_all">All</string>
    <string name="text_21_00_24_00">21:00 - 24:00</string>
    <string name="text_open_your_email_to_retrieve_your_new_password">Open your email to retrieve your new password.</string>
    <string name="text_find_the_way">Find the way</string>
    <string name="text_change_showtime">Change showtime</string>
    <string name="text_reschedule">Reschedule</string>
    <string name="text_price">Price:</string>
    <string name="text_book_tickets">Book Tickets</string>
    <string name="text_please_make_sure_to_select_at_least_one_seat">Please make sure to select at least one seat.</string>
    <string name="text_combo_popcorn_and_drink">Combo – Popcorn and Drink</string>
    <string name="text_crunchy_popcorn_refreshing_drink_enjoy">Crunchy popcorn, refreshing drink – Enjoy!</string>
    <string name="text_refreshments">Refreshments</string>
    <string name="text_movie_tickets">Movie tickets</string>
    <string name="text_total">Total</string>
    <string name="text_payment_information">Payment Information</string>
    <string name="text_booking_information">Booking information</string>
    <string name="text_time">Time:</string>
    <string name="text_showtime">Showtime:</string>
    <string name="text_format">Format:</string>
    <string name="text_screening_room">Screening room:</string>
    <string name="text_seat_number">Seat number:</string>
    <string name="text_recipient_information">Recipient Information</string>
    <string name="text_something_went_wrong_please_try_again">Something went wrong. Please try again.</string>
    <string name="text_payment">Payment</string>
    <string name="text_pay_now">Pay now</string>
    <string name="text_profile_setting">Profile Setting</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_save">Save</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_current_password">Current Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_profile">Profile</string>
    <string name="text_bookings">Bookings</string>
    <string name="text_booking_history">Booking History</string>
    <string name="text_qr_code">QR Code</string>
    <string name="text_log_out">Log out</string>
    <string name="text_voucher_collection">Voucher collection</string>
    <string name="text_find_hidden_voucher">Find Hidden Voucher</string>
    <string name="text_enter_voucher_code">Enter voucher code</string>
    <string name="text_cinestech_voucher">Cinestech Voucher</string>
    <string name="text_discount_applied_you_save_percent">Discount applied, you save %1$s</string>
    <string name="text_discount_applied_you_save_value">Discount applied, you save %1$s</string>
    <string name="text_voucher">Voucher</string>
    <string name="text_address">Address:</string>
    <string name="text_navigate_with_google_maps">Navigate with Google Maps</string>
    <string name="text_your_reservation_expired_please_book_again">Your reservation expired. Please book again.</string>
    <string name="text_home">Home</string>
    <string name="text_retry">Retry</string>
    <string name="text_oops_no_showtimes_today">Oops! No showtimes today.</string>
    <string name="text_find_show">Find show</string>
    <string name="text_reschedule_showtime">Reschedule showtime</string>
    <string name="text_select">Select</string>
    <string name="text_please_log_in_to_continue">Please log in to continue</string>
    <string name="text_this_movie_isn_t_available_yet_please_check_back_soon">This movie isn’t available yet. Please check back soon.</string>
    <string name="text_review_t">Audience Reviews</string>
    <string name="text_post">Post Review</string>
</resources>